crates/rhdl/tests/expect/Mul_binop_fails.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
    ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:32:25]
 31 │                 let h = h.val();
 32 │                 let j = h $op h;
    ·                         ───┬───
    ·                            ╰── RHDL does not support the use of binary operators on this type
 33 │                 signal(j)
    ╰────
  help: You cannot roll your own binary operator in RHDL.  You should write a kernel and call it as a regular function.
